A fix and test case for  Bug#6096 "field.max_length is always zero for numeric columns (stmt_resultset_metadata)"